--- a/app.json
+++ b/app.json
@@ -31,6 +31,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "2449caf0-31aa-42cb-92fe-f70701d195f"
+      }
     }
   }
 }
