--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-system-ui": "~3.0.4",
     "expo-updates": "~0.25.14",
     "expo-web-browser": "~13.0.3",
+    "firebase": "^10.12.0",
     "lottie-react-native": "6.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -39,7 +40,9 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "expo-device": "~6.0.2",
+    "expo-notifications": "~0.28.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
