--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "expo-camera": "~15.0.9",
     "expo-constants": "~16.0.1",
     "expo-dev-client": "~4.0.14",
+    "expo-device": "~6.0.2",
     "expo-font": "~12.0.5",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
+    "expo-notifications": "~0.28.3",
     "expo-router": "~3.5.12",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
@@ -37,12 +39,12 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "expo-device": "~6.0.2",
-    "expo-notifications": "~0.28.3"
+    "expo-checkbox": "~3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
