--- a/app.json
+++ b/app.json
@@ -45,7 +45,7 @@
         "origin": false
       },
       "eas": {
-        "projectId": "2449caf0-31aa-42cb-92fe-f70701d195f"
+        "projectId": "2449caf0-31aa-42cb-92fe-f70701d195fe"
       }
     }
   }
