--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/stack": "^6.3.29",
     "expo": "~51.0.5",
     "expo-camera": "~15.0.9",
+    "expo-checkbox": "~3.0.0",
     "expo-constants": "~16.0.1",
     "expo-dev-client": "~4.0.14",
     "expo-device": "~6.0.2",
@@ -40,11 +41,11 @@
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-chat": "^2.4.0",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "expo-checkbox": "~3.0.0"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
