--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.3.29",
     "expo": "~51.0.5",
+    "expo-av": "^14.0.5",
     "expo-camera": "~15.0.9",
     "expo-checkbox": "~3.0.0",
     "expo-constants": "~16.0.1",
