--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.12.0",
     "lottie-react-native": "6.7.0",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
