--- a/eas.json
+++ b/eas.json
@@ -8,6 +8,10 @@
       "distribution": "internal"
     },
     "preview": {
+      "android": {
+        "buildType": "apk"
+      },
+    "preview2": {
       "distribution": "internal"
     },
     "production": {
