--- a/package.json
+++ b/package.json
@@ -23,22 +23,27 @@
     "@react-navigation/native": "^7.0.4",
     "@react-navigation/stack": "^7.0.6",
     "axios": "^1.7.2",
+    "color": "^4.2.3",
     "expo": "^52.0.11",
     "expo-av": "~15.0.1",
+    "expo-blur": "~14.0.1",
     "expo-camera": "~16.0.7",
     "expo-checkbox": "~4.0.0",
     "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.4",
     "expo-device": "~7.0.1",
     "expo-font": "~13.0.1",
+    "expo-image-manipulator": "~13.0.5",
+    "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.2",
     "expo-notifications": "~0.29.8",
-    "expo-router": "~4.0.9",
+    "expo-router": "^4.0.11",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.4",
     "expo-updates": "~0.26.9",
+    "expo-video": "~2.0.2",
     "expo-web-browser": "~14.0.1",
     "firebase": "^10.14.1",
     "lottie-react-native": "7.1.0",
@@ -56,11 +61,11 @@
     "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-navigation": "^5.0.0",
-    "expo-image-manipulator": "~13.0.5"
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/color": "^4.2.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
